<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.flyersoft.sdk.widget.main.HeaderLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></com.flyersoft.sdk.widget.main.HeaderLayout>


        <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RadioGroup
            android:id="@+id/rg_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/main_radiobutton1"
                style="@style/main_tab"
                android:drawableTop="@drawable/main_bottombar_recommend_selector"
                android:text="@string/recommend" />

            <RadioButton
                android:id="@+id/main_radiobutton2"
                style="@style/main_tab"
                android:drawableTop="@drawable/main_bottombar_free_selector"
                android:text="@string/free" />

            <RadioButton
                android:id="@+id/main_radiobutton3"
                style="@style/main_tab"
                android:drawableTop="@drawable/main_bottombar_rankings_selector"
                android:text="@string/topreview" />

            <RadioButton
                android:id="@+id/main_radiobutton4"
                style="@style/main_tab"
                android:drawableTop="@drawable/main_bottombar_category_selector"
                android:text="@string/classify" />

        </RadioGroup>
    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        layout="@layout/main_left_menu_main">
    </include>
</android.support.v4.widget.DrawerLayout>