<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/bule"
        android:gravity="center_vertical"
        android:paddingLeft="27dp"
        android:paddingRight="5dp">

        <TextView
            android:id="@+id/userinfo_recharge_type_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/currency_recharge"
            android:textColor="#ffffff"
            android:textSize="22dp" />

        <ImageView
            android:id="@+id/userinfo_recharge_del_img"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentRight="true"
            android:padding="22dp"
            android:src="@mipmap/top_del" />
    </RelativeLayout>

    <RelativeLayout style="@style/userinfo_recharge_bt">
        <TextView
            style="@style/userinfo_recharge_bt_text"
            android:text="@string/recharge_type" />
    </RelativeLayout>
    <View style="@style/line_1"></View>

    <RelativeLayout
        android:id="@+id/userinfo_recharge_type_wx"
        style="@style/userinfo_recharge_bt">

        <ImageView
            android:id="@+id/userinfo_recharge_type_img1"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:clickable="false"
            android:src="@mipmap/logo_weixin" />
        <TextView
            style="@style/userinfo_recharge_bt_text"
            android:text="@string/recharge_type_wx"
            android:layout_toRightOf="@+id/userinfo_recharge_type_img1"
            android:layout_marginLeft="11dp"/>
    </RelativeLayout>
    <View style="@style/line_1"></View>

    <RelativeLayout
        android:id="@+id/userinfo_recharge_type_zfb"
        style="@style/userinfo_recharge_bt">
        <ImageView
            android:id="@+id/userinfo_recharge_type_img2"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:clickable="false"
            android:src="@mipmap/logo_zhifubao" />
        <TextView
            style="@style/userinfo_recharge_bt_text"
            android:text="@string/recharge_type_zfb"
            android:layout_toRightOf="@+id/userinfo_recharge_type_img2"
            android:layout_marginLeft="11dp"/>
    </RelativeLayout>
    <View style="@style/line_1"></View>



</LinearLayout>
