<?xml version="1.0" encoding="utf-8"?>
<com.flyersoft.sdk.widget.main.other.LeftMenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_left_menu_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fafafa">

    <RelativeLayout
        xmlns:fresco="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="#45d300"
        android:paddingLeft="17dp"
        android:gravity="center_vertical">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/main_left_menu_user_pic"
            android:layout_width="57dp"
            android:layout_height="57dp"
            fresco:placeholderImage="@mipmap/default_user_portrait"
        />

        <TextView
            android:id="@+id/main_left_menu_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/main_left_menu_user_pic"
            android:layout_marginLeft="10dp"
            android:text="@string/user_default_name"
            android:textSize="17dp"
            android:textColor="#ffffff"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_left_menu_user_store"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="center_vertical"
        android:paddingLeft="17dp">

        <ImageView
            android:id="@+id/main_left_menu_user_store_img"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:src="@mipmap/default_user_portrait"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/main_left_menu_user_store_img"
            android:gravity="center_vertical"
            android:text="@string/user_book_store"
            android:textSize="17dp"
            android:textColor="#000000"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#eeeeee"></View>

    <RelativeLayout
        android:id="@+id/main_left_menu_user_account"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="center_vertical"
        android:paddingLeft="17dp">

        <ImageView
            android:id="@+id/main_left_menu_user_account_img"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:src="@mipmap/default_user_portrait"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/main_left_menu_user_account_img"
            android:gravity="center_vertical"
            android:text="@string/user_account"
            android:textSize="17dp"
            android:textColor="#000000"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#eeeeee"></View>


</com.flyersoft.sdk.widget.main.other.LeftMenuLayout>