<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.flyersoft.sdk.widget.detail.DetailHeaderLayout
        android:id="@+id/buy_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.flyersoft.sdk.widget.detail.DetailHeaderLayout>

    <LinearLayout
        android:id="@+id/buy_price_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:elevation="10dp"
        android:background="#fff">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:paddingLeft="16dp">

            <TextView
                android:id="@+id/buy_price_info_chose1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/buy_books_chose"
                android:textColor="#333333"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/buy_price_info_chose2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/buy_price_info_chose1"
                android:text="0"
                android:textColor="#333333"
                android:textSize="22dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/buy_price_info_chose2"
                android:text="@string/buy_books_section"
                android:textColor="#333333"
                android:textSize="17dp" />
        </RelativeLayout>

        <!-- 分隔线 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#e5e5e5"></View>


        <!-- 价格确认 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp">

            <RelativeLayout
                android:id="@+id/buy_price_info_price_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/buy_price_info_price1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buy_books_price"
                    android:textColor="#333333"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/buy_price_info_price2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/buy_price_info_price1"
                    android:text="200书币 "
                    android:textColor="#999999"
                    android:textSize="15dp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/buy_price_info_price3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/buy_price_info_price2"
                    android:layout_toRightOf="@+id/buy_price_info_price2"
                    android:text="0书币"
                    android:textColor="#1e88e5"
                    android:textSize="17dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/buy_price_info_price_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buy_price_info_price_layout1"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/buy_price_info_balance1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="余额："
                    android:textColor="#333333"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/buy_price_info_balance2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/buy_price_info_balance1"
                    android:text="0书币" />
            </RelativeLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/buy_price_affirm_bt"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#1e88e5"
            android:text="@string/buy_books_affirm"
            android:textColor="#ffffff"
            android:textSize="17dp"
            android:enabled="false"/>
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/buy_category_expandablelistview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buy_price_info_layout"
        android:layout_below="@+id/buy_header_layout"
        android:divider="#e5e5e5"
        android:childDivider="#e5e5e5"
        android:dividerHeight="1px"></ExpandableListView>
</RelativeLayout>
